--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,11 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-body {
-    background-color: var(--primary-bg-color);
-}
-
 :root {
     --fonte-primaria: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     --primary-bg-color: rgb(64, 66, 68);
@@ -20,79 +12,19 @@ body {
     height: 70vh;
 }
 
-.flex {
-    display: flex;
-}
-
-.center {
-    justify-content: center;
-}
-
-nav {
-    flex-direction: row;
-    align-items: center;
-    height: 80px;
-    background-color: var(--secondary-bg-color);
-    color: var(--basic);
-    font-family: var(--fonte-primaria);
-    justify-content: space-around;
-}
-
-    nav a {
-        color: var(--basic);
-        text-decoration: none;
-        text-transform: uppercase;
-        background: none;
-    }
-
-    nav h1 {
-        background: none;
-    }
-
 form {
     display: flex;
-    flex-direction: column;
     gap: 20px;
     padding: 50px 40px;
+    flex-direction: column;
     width: 400px;
     justify-self: center;
     margin-top: 100px;
 }
 
-input {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: aliceblue;
-}
-
-    input:focus {
-        background-color: var(--basic);
-    }
-
 button {
     padding: 15px 0;
     background-color: var(--secondary-bg-color);
     color: var(--basic);
+    cursor: pointer;
 }
-
-footer {
-    flex-direction: row;
-    align-items: center;
-    height: 80px;
-    background-color: var(--secondary-bg-color);
-    color: var(--basic);
-    font-family: var(--fonte-primaria);
-    justify-content: space-around;
-    margin-top: 50px;
-}
-
-    footer a {
-        color: var(--basic);
-        text-decoration: none;
-        text-transform: uppercase;
-        background: none;
-    }
-
-    footer h1 {
-        background: none;
-    }
