--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameDB</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/' + request.endpoint + '.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css')}}">
 </head>
 <body>
     {% block nav %} {% endblock %}
