--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -49,7 +49,7 @@ button {
     width: fit-content;
     height: 90%;
     flex-direction: row;
-    justify-content: flex-start space-around;
+    justify-content: flex-start;
     gap: 30px;
     flex-wrap: wrap;
 }
