--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -59,7 +59,8 @@
                     et.style.color = '#e1fa05'
                     break
                 case 'drop':
-                    status = 'red'
+                    status = 'Abandonado'
+                    et.style.color = 'red'
                     break
                 default:
                     status = ''
