--- a/templates/registerGame.html
+++ b/templates/registerGame.html
@@ -4,8 +4,13 @@
 
 <h1>Registrar Jogo</h1>
 
+<div class="img-container">
+    <img id="preview" src="https://res.cloudinary.com/teepublic/image/private/s--oHAQBGUB--/t_Resized%20Artwork/c_fit,g_north_west,h_954,w_954/co_000000,e_outline:48/co_000000,e_outline:inner_fill:48/co_ffffff,e_outline:48/co_ffffff,e_outline:inner_fill:48/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_auto,h_630,q_auto:good:420,w_630/v1630580323/production/designs/24060611_0.jpg" alt="CAPA DO JOGO">
+</div>
 <div id="body-form" class="flex center">
     <form action="/registerGame" method="POST">
+
+
         <input type="text" name="title" placeholder="Título" required> <br>
 
         <select name="genero" id="genero" class="custom-select" required>
@@ -82,7 +87,23 @@
 
         window.addEventListener('DOMContentLoaded', () => {
             atualizarValorRange()
+
+            const inputCapa = document.getElementById("capa");
+            const preview = document.getElementById("preview");
+
+            inputCapa.addEventListener("input", () => {
+                const url = inputCapa.value.trim();
+
+                if (url) {
+                    preview.src = url;
+                    preview.style.display = "flex"
+                } else {
+                    preview.src = "https://res.cloudinary.com/teepublic/image/private/s--oHAQBGUB--/t_Resized%20Artwork/c_fit,g_north_west,h_954,w_954/co_000000,e_outline:48/co_000000,e_outline:inner_fill:48/co_ffffff,e_outline:48/co_ffffff,e_outline:inner_fill:48/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_auto,h_630,q_auto:good:420,w_630/v1630580323/production/designs/24060611_0.jpg";
+                    preview.style.display = "flex";
+                }
+            })
         })
+
     </script>
 {% endblock %}
 
