--- a/static/css/registerGame.css
+++ b/static/css/registerGame.css
@@ -10,6 +10,7 @@
 #body-form {
     width: 100%;
     height: 70vh;
+    flex-direction: row;
 }
 
 h1 {
@@ -58,15 +59,15 @@ button {
 }
 
 .img-container {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
     border-radius: 10px;
     align-self: center;
+    justify-self: center;
 }
 
 .img-container img {
-        gap: 20px;
         width: 100%;
         height: 100%;
         object-fit: cover;    
@@ -77,5 +78,4 @@ form {
     flex-direction: column;
     width: 400px;
     justify-self: center;
-    margin-top: 100px;
 }
